Bug 154469 - FILESAVE DOCX Hyperlink in grouped shape not exported
Summary: FILESAVE DOCX Hyperlink in grouped shape not exported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords:
Depends on:
Blocks: DOCX-Hyperlink DOCX-Grouped-Shapes
  Show dependency treegraph
 
Reported: 2023-03-30 09:12 UTC by NISZ LibreOffice Team
Modified: 2025-05-09 21:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-03-30 09:12:00 UTC
Description:
The document, created in Word attachment 175748 [details] , has two shapes, both with hyperlinks added to them, and then grouped together.
In Writer the links aren't exported.

Steps to Reproduce:
1:Open the attached file.

Actual Results:
Hyperlinks are not exported correctly.

Expected Results:
Hyperlinks are properly imported.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4daeb21a5f533144fd6b3bc397a98f37e5b1dd4c
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 Commit Notification 2023-04-11 17:36:17 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7460e4f4a7b15cc7984adf65bc17e3d580413224

tdf#154469 DOCX export: fix hyperlink in group shape

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 NISZ LibreOffice Team 2023-04-17 06:20:18 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 96c4c0fcffc4f0a1f5a49be576646d15d613228e
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 3 Commit Notification 2023-04-18 09:57:23 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f323e6de3dc1e2658142644a3357cbd5459da4f6

tdf#154469 DOCX export: fix hyperlink in group shape

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.